[Raony] #368 -  Fixed vertical alignment

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -116,6 +116,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  align-content: flex-start;
 
   @include media-query (THREE){
     width: 2 * $COLUMN-WIDTH;
@@ -368,6 +369,12 @@
   }
   @include media-query(THREE) {
     margin-top: 0;
+  }
+}
+
+#home .printed-news {
+  .section-name {
+    @include section-name();
   }
 }
 
